styles(www): fix sidebar responsiveness & scrollbar

--- a/www/src/styles/globals.css
+++ b/www/src/styles/globals.css
@@ -19,10 +19,6 @@
   }
 }
 
-.scroll-gutter {
-  scrollbar-gutter: stable;
-}
-
 [type="checkbox"] {
   box-sizing: border-box;
   padding: 0;
